favourite section bug resolved (used to fetch all data from table)

--- a/src/main/resources/templates/add-contact.html
+++ b/src/main/resources/templates/add-contact.html
@@ -56,50 +56,19 @@
 						
 						<h4><b>My Favorites</b></h4>
 						<div class="list-group people-group">
-							<a href="#" class="list-group-item">
-								<div class="media">
-									<div class="pull-left">
-										<img class="img-circle" src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="...">
+							<tr th:each="contact: ${favourites}">
+								<a href="#" class="list-group-item">
+									<div class="media">
+										<div class="pull-left">
+											<img class="img-circle" src="https://bootdey.com/img/Content/avatar/avatar6.png" alt="...">
+										</div>
+										<div class="media-body">
+											<h4 class="media-heading" th:text="${contact.name}"></h4>
+											<small th:text="${contact.position}"></small>
+										</div>
 									</div>
-									<div class="media-body">
-										<h4 class="media-heading">John Wayne</h4>
-										<small>Software Engineer</small>
-									</div>
-								</div>
-							</a>
-							<a href="#" class="list-group-item">
-								<div class="media">
-									<div class="pull-left">
-										<img class="img-circle" src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="...">
-									</div>
-									<div class="media-body">
-										<h4 class="media-heading">Jane Dane</h4>
-										<small>Software Engineer</small>
-									</div>
-								</div>
-							</a>
-							<a href="#" class="list-group-item">
-								<div class="media">
-									<div class="pull-left">
-										<img class="img-circle" src="https://bootdey.com/img/Content/avatar/avatar3.png" alt="...">
-									</div>
-									<div class="media-body">
-										<h4 class="media-heading">Juan Dela Cruz</h4>
-										<small>Software Engineer</small>
-									</div>
-								</div>
-							</a>
-							<a href="#" class="list-group-item">
-								<div class="media">
-									<div class="pull-left">
-										<img class="img-circle" src="https://bootdey.com/img/Content/avatar/avatar4.png" alt="...">
-									</div>
-									<div class="media-body">
-										<h4 class="media-heading">Jose Cruz</h4>
-										<small>Software Engineer</small>
-									</div>
-								</div>
-							</a>
+								</a>
+							</tr>
 						</div>
 						
 					</div>
@@ -165,7 +134,7 @@
 		                    	
         					
         						<div class='col-md-10 mb-3'><br><br>
-                    				<button style="margin-top: 0.5em; margin-bottom: 0.5em;" type="submit" name="submit" class="btn btn-primary btn-lg">Submit</button>
+                    				<button style="margin-top: 0.5em; margin-bottom: 0.5em;" type="submit" name="submit" class="btn btn-primary btn-lg">Submit</button><br><br><br><br><br>
 								</div>
 		                        
 		                        
