--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -57,21 +57,21 @@
 						<h4><b>My Favorites</b></h4>
 						
 						
-							<div class="list-group people-group">
-								<tr th:each="contact: ${allContacts}">
-									<a href="#" class="list-group-item">
-										<div class="media">
-											<div class="pull-left">
-												<img class="img-circle" src="https://bootdey.com/img/Content/avatar/avatar6.png" alt="...">
-											</div>
-											<div class="media-body">
-												<h4 class="media-heading" th:text="${contact.name}"></h4>
-												<small th:text="${contact.position}"></small>
-											</div>
+						<div class="list-group people-group">
+							<tr th:each="contact: ${favourites}">
+								<a href="#" class="list-group-item">
+									<div class="media">
+										<div class="pull-left">
+											<img class="img-circle" src="https://bootdey.com/img/Content/avatar/avatar6.png" alt="...">
 										</div>
-									</a>
-								</tr>
-							</div>
+										<div class="media-body">
+											<h4 class="media-heading" th:text="${contact.name}"></h4>
+											<small th:text="${contact.position}"></small>
+										</div>
+									</div>
+								</a>
+							</tr>
+						</div>
 						
 						
 						
@@ -147,57 +147,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="modal modal-pull-right" data-easein="fadeInRight" data-easeout="fadeOutRight" id="modal-pull-right-add" tabindex="-1" role="dialog" aria-hidden="true" style="display: none;">
-					<div class="modal-dialog">
-						<div class="modal-content animated fadeOutRight">
-							<div class="modal-body">
-								<div class="row modal-close">
-									<div class="col-md-12 padding-bottom-8 padding-top-8 bg-silver">
-										<h4 class="pull-left"><b>Create New Contact</b></h4>
-										<ul class="list-unstyled list-inline text-right">
-											<li class="close-right-modal"><span class="fa fa-times fa-2x" data-dismiss="modal"></span></li>
-										</ul>
-									</div>
-								</div>
-								<div class="row">
-									<div class="col-md-12">
-										<div class="contact-add-content">
-											<form class="form-horizontal tabular-form margin-top-10">
-												<div class="form-group">
-													<label for="name" class="col-sm-2 control-label">Name</label>
-													<div class="col-sm-10 tabular-border">
-														<input type="text" class="form-control" id="name" placeholder="Full Name">
-													</div>
-												</div>
-												<div class="form-group">
-													<label for="email" class="col-sm-2 control-label">Email</label>
-													<div class="col-sm-10 tabular-border">
-														<input type="text" class="form-control" id="email" placeholder="Email">
-													</div>
-												</div>
-												<div class="form-group">
-													<label for="phone" class="col-sm-2 control-label">Phone</label>
-													<div class="col-sm-10 tabular-border">
-														<input type="text" class="form-control" id="phone" placeholder="Phone">
-													</div>
-												</div>
-												<div class="form-group">
-													<label for="address" class="col-sm-2 control-label">Address</label>
-													<div class="col-sm-10 tabular-border">
-														<input type="text" class="form-control" id="address" placeholder="Address">
-													</div>
-												</div>
-												<div class="form-actions">
-													<button type="button" class="btn btn-silver btn-flat">Cancel</button> <button type="button" class="btn btn-green btn-flat">Save Changes</button>
-												</div>
-											</form>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
+				
 			</div>
 		</div>
 	</div>
