search page favourite link now works

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -59,7 +59,7 @@
 						
 						<div class="list-group people-group">
 							<tr th:each="contact: ${favourites}">
-								<a href="#" class="list-group-item">
+								<a th:href="@{/search(param=${contact.name})}" class="list-group-item">
 									<div class="media">
 										<div class="pull-left">
 											<img class="img-circle" src="https://bootdey.com/img/Content/avatar/avatar6.png" alt="...">
