My Profile section added to home page

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -32,6 +32,7 @@
 					<div class="col-md-3">
 						<h4 class="page-title"><b>Contacts</b></h4>
 						<ul class="nav nav-pills nav-stacked nav-contacts">
+							
 							<li class="active">
 								<a th:href="@{/home}">
 									All Contacts
@@ -42,6 +43,12 @@
 								<a th:href="@{/addContact}">
 									Add Contact
 									
+								</a>
+							</li>
+							<li>
+								<a th:href="@{/profile}">
+									My Profile
+									<span class="badge pull-right"></span>
 								</a>
 							</li>
 							<li>
