--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -38,10 +38,16 @@
 									<span class="badge pull-right" th:text="${totalContacts}"></span>
 								</a>
 							</li>
-							<li class="active">
+							<li>
 								<a th:href="@{/addContact}">
 									Add Contact
 									
+								</a>
+							</li>
+							<li class="active">
+								<a th:href="@{/profile}">
+									My Profile
+									<span class="badge pull-right"></span>
 								</a>
 							</li>
 							<li>
@@ -77,7 +83,7 @@
 						<br>
 						<div class="row">
 							<div class="col-md-6">
-								<h3>Update Contact</h3>
+								<h3>Update Profile</h3>
 							</div>
 							
 						</div>
