--- a/src/main/resources/templates/update-contact.html
+++ b/src/main/resources/templates/update-contact.html
@@ -45,6 +45,12 @@
 								</a>
 							</li>
 							<li>
+								<a th:href="@{/profile}">
+									My Profile
+									<span class="badge pull-right"></span>
+								</a>
+							</li>
+							<li>
 								<a th:href="@{/logout}">
 									Exit
 									
