contact number now opens caller

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -123,7 +123,7 @@
 												<i class="fa fa-map-marker" th:text="' ' + ${contact.address}"></i>
 												<ul class="list-unstyled">
 													<li><i class="fa fa-mars-stroke"></i><span th:text="' ' + ${contact.gender}"></span></li>
-													<li><i class="fa fa-mobile"></i><span th:text="' ' + ${contact.phone}"></span></li>
+													<li><i class="fa fa-mobile"></i><span>&nbsp;</span><a th:href="'tel:' + ${contact.phone}" th:text="${contact.phone}"></a></li>
 													<li><i class="fa fa-envelope-o"></i><span>&nbsp;</span><a th:href="'mailto:' + ${contact.email}" th:text="${contact.email}" target="_blank"></a></li>
 													
 												</ul>												
