--- a/src/main/resources/templates/update-contact.html
+++ b/src/main/resources/templates/update-contact.html
@@ -196,7 +196,7 @@
 				<div
 					class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white">
 					<p class="h5">
-						© 2021 All right Reversed. <a class="text-green ml-2"
+						&copy; 2021 All right Reversed. <a class="text-green ml-2"
 							href="https://github.com/Nawaz2000" target="_blank">Md. Nawaz
 							Rahaman</a>
 					</p>
