--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -18,7 +18,7 @@
 	<br><br>
 	<div class="container" align="center"  >
 		<div class="card2" >
-			<div class="card-body" style="color: #007b5e;">
+			<div class="card-body" style="color: #696969;">
 				<h2 class="card-title" id="res"><b>My Contacts -v1.0</b></h2>
 			</h3>
 			<hr>
@@ -93,7 +93,7 @@
 									</div>
 									<div class="col-md-3">
 										<div class="btn-group" style="display:block">										  						  
-										  <button type="submit" class="btn btn-primary" style="width: 100%;">Search</button>
+										  <button type="submit" class="btn btn-primary" style="width: 100%;background-color: #696969;">Search</button>
 										</div>
 									</div>
 								</form>
@@ -130,7 +130,7 @@
 											</div>
 										</div>
 									</div>
-									<a th:href="@{/updateContact(param=${contact.id})}" type="button" class="btn btn-primary">Update</a>
+									<a th:href="@{/updateContact(param=${contact.id})}" type="button" class="btn button1">Update</a>
 									<a th:href="@{/deleteContact(param=${contact.id})}" type="button" class="btn btn-danger">Delete</a>
 								</div>
 							</div>
