--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -18,7 +18,7 @@
 	<br><br>
 	<div class="container" align="center"  >
 		<div class="card2" >
-			<div class="card-body" style="color: #007b5e;">
+			<div class="card-body" style="color: #696969;">
 				<h2 class="card-title" id="res"><b>My Contacts -v1.0</b></h2>
 			</h3>
 			<hr>
@@ -149,7 +149,7 @@
 		                    	
         					
         						<div class='col-md-10 mb-3'><br><br>
-                    				<button style="margin-top: 0.5em; margin-bottom: 0.5em;" type="submit" name="submit" class="btn btn-primary btn-lg">Submit</button><br><br><br><br><br>
+                    				<button style="margin-top: 0.5em; margin-bottom: 0.5em;" type="submit" name="submit" class="btn btn-lg button1">Submit</button><br><br><br><br><br>
 								</div>
 		                        
 		                        
