--- a/src/main/resources/templates/search-results.html
+++ b/src/main/resources/templates/search-results.html
@@ -18,7 +18,7 @@
 	<br><br>
 	<div class="container" align="center"  >
 		<div class="card2" >
-			<div class="card-body" style="color: #007b5e;">
+			<div class="card-body" style="color: #696969;">
 				<h2 class="card-title" id="res"><b>My Contacts -v1.0</b></h2>
 			</h3>
 			<hr>
@@ -124,7 +124,7 @@
 											</div>
 										</div>
 									</div>
-									<a th:href="@{/updateContact(param=${contact.id})}" type="button" class="btn btn-primary">Update</a>
+									<a th:href="@{/updateContact(param=${contact.id})}" type="button" class="btn btn-lg button1">Update</a>
 									<a th:href="@{/deleteContact(param=${contact.id})}" type="button" class="btn btn-danger">Delete</a>
 								</div>
 							</div>
