--- a/src/main/resources/templates/update-contact.html
+++ b/src/main/resources/templates/update-contact.html
@@ -142,7 +142,7 @@
 		                    	
         					
         						<div class='col-md-10 mb-3'><br><br>
-                    				<button style="margin-top: 0.5em; margin-bottom: 0.5em;" type="submit" name="submit" class="btn btn-lg button1">Submit</button><br><br><br><br><br>
+                    				<button style="margin-top: 0.5em; margin-bottom: 0.5em; color: white;" type="submit" name="submit" class="btn btn-lg button1">Submit</button><br><br><br><br><br>
 								</div>
 		                        
 		                        
