--- a/src/main/resources/templates/search-results.html
+++ b/src/main/resources/templates/search-results.html
@@ -124,7 +124,7 @@
 											</div>
 										</div>
 									</div>
-									<a th:href="@{/updateContact(param=${contact.id})}" type="button" class="btn btn-lg button1">Update</a>
+									<a th:href="@{/updateContact(param=${contact.id})}" type="button" class="btn btn-lg button1" style="color:white;">Update</a>
 									<a th:href="@{/deleteContact(param=${contact.id})}" type="button" class="btn btn-danger">Delete</a>
 								</div>
 							</div>
