--- a/src/main/resources/templates/search-results.html
+++ b/src/main/resources/templates/search-results.html
@@ -137,68 +137,16 @@
 						</div>
 						<div class="pull-right">
 							<ul class="pagination pagination-split pagination-sm pagination-contact">
-								<li class="disabled"><a href="#"><i class="fa fa-angle-left"></i></a></li>
-								<li class="active"><a href="#">1</a></li>
-								<li><a href="#">2</a></li>
-								<li><a href="#">3</a></li>
-								<li><a href="#">4</a></li>
-								<li><a href="#">5</a></li>
-								<li><a href="#"><i class="fa fa-angle-right"></i></a></li>
+								<li th:if="${currentPage != 0}"><a th:href="@{/home(page=${currentPage - 1})}"><i class="fa fa-angle-left"></i></a></li>								
+								
+								<li th:classappend="${currentPage==i-1?'active':''}" th:each="i : ${#numbers.sequence(1,totalPages)}"><a th:href="@{/home(page=${i-1})}"><span th:text="${i}"></span></a></li>
+
+								<li th:if="${currentPage+1 != totalPages}"><a th:href="@{/home(page=${currentPage + 1})}"><i class="fa fa-angle-right"></i></a></li>
 							</ul>
 						</div>
 					</div>
 				</div>
-				<div class="modal modal-pull-right" data-easein="fadeInRight" data-easeout="fadeOutRight" id="modal-pull-right-add" tabindex="-1" role="dialog" aria-hidden="true" style="display: none;">
-					<div class="modal-dialog">
-						<div class="modal-content animated fadeOutRight">
-							<div class="modal-body">
-								<div class="row modal-close">
-									<div class="col-md-12 padding-bottom-8 padding-top-8 bg-silver">
-										<h4 class="pull-left"><b>Create New Contact</b></h4>
-										<ul class="list-unstyled list-inline text-right">
-											<li class="close-right-modal"><span class="fa fa-times fa-2x" data-dismiss="modal"></span></li>
-										</ul>
-									</div>
-								</div>
-								<div class="row">
-									<div class="col-md-12">
-										<div class="contact-add-content">
-											<form class="form-horizontal tabular-form margin-top-10">
-												<div class="form-group">
-													<label for="name" class="col-sm-2 control-label">Name</label>
-													<div class="col-sm-10 tabular-border">
-														<input type="text" class="form-control" id="name" placeholder="Full Name">
-													</div>
-												</div>
-												<div class="form-group">
-													<label for="email" class="col-sm-2 control-label">Email</label>
-													<div class="col-sm-10 tabular-border">
-														<input type="text" class="form-control" id="email" placeholder="Email">
-													</div>
-												</div>
-												<div class="form-group">
-													<label for="phone" class="col-sm-2 control-label">Phone</label>
-													<div class="col-sm-10 tabular-border">
-														<input type="text" class="form-control" id="phone" placeholder="Phone">
-													</div>
-												</div>
-												<div class="form-group">
-													<label for="address" class="col-sm-2 control-label">Address</label>
-													<div class="col-sm-10 tabular-border">
-														<input type="text" class="form-control" id="address" placeholder="Address">
-													</div>
-												</div>
-												<div class="form-actions">
-													<button type="button" class="btn btn-silver btn-flat">Cancel</button> <button type="button" class="btn btn-green btn-flat">Save Changes</button>
-												</div>
-											</form>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
+				
 			</div>
 		</div>
 	</div>
