--- a/src/main/resources/templates/search-results.html
+++ b/src/main/resources/templates/search-results.html
@@ -137,11 +137,11 @@
 						</div>
 						<div class="pull-right">
 							<ul class="pagination pagination-split pagination-sm pagination-contact">
-								<li th:if="${currentPage != 0}"><a th:href="@{/home(page=${currentPage - 1})}"><i class="fa fa-angle-left"></i></a></li>								
+								<li th:if="${currentPage != 0}"><a th:href="@{/search(page=${currentPage - 1},param=${param.param[0]})}"><i class="fa fa-angle-left"></i></a></li>								
 								
-								<li th:classappend="${currentPage==i-1?'active':''}" th:each="i : ${#numbers.sequence(1,totalPages)}"><a th:href="@{/home(page=${i-1})}"><span th:text="${i}"></span></a></li>
+								<li th:classappend="${currentPage==i-1?'active':''}" th:each="i : ${#numbers.sequence(1,totalPages)}"><a th:href="@{/search(page=${i-1},param=${param.param[0]})}"><span th:text="${i}"></span></a></li>
 
-								<li th:if="${currentPage+1 != totalPages}"><a th:href="@{/home(page=${currentPage + 1})}"><i class="fa fa-angle-right"></i></a></li>
+								<li th:if="${currentPage+1 != totalPages}"><a th:href="@{/search(page=${currentPage + 1},param=${param.param[0]})}"><i class="fa fa-angle-right"></i></a></li>
 							</ul>
 						</div>
 					</div>
