possible big fix...... try-> upload to heroku

--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -3,6 +3,13 @@ body{
     background:#eee;
 }
 
+.avatar {
+  vertical-align: middle;
+  width: 320px;
+  height: 320px;
+  border-radius: 50%;
+}
+
 .button1{
 	background-color: #9400D3;
 	color: white;
