--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -99,8 +99,8 @@
 		                    
 		                    	<input type="hidden" name="id" th:field="*{id}" th:value="*{id}">
 		
-								<div class="col-md-6 mb-4">		                   			                    	
-									<img class="img-circle" src="https://bootdey.com/img/Content/avatar/avatar6.png" alt="...">																
+								<div class="col-md-5 mb-4">		                   			                    	
+									<img class="avatar" alt="Avatar" th:src="*{image}">																
 								</div>
 								
 								<div class="col-md-4 mb-4">
