port changed, application now to fetch data from server

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -100,8 +100,8 @@
 		                    	<input type="hidden" name="id" th:field="*{id}" th:value="*{id}">
 		
 								<div class="col-md-5 mb-4">		                   			                    	
-									<!-- <img class="avatar" alt="Avatar" th:src="*{image}"> -->
-									<img class="img-circle" src="https://bootdey.com/img/Content/avatar/avatar6.png" alt="...">																
+									<img class="avatar" alt="Avatar" th:src="*{image}"> 
+									<!-- <img class="img-circle" src="https://bootdey.com/img/Content/avatar/avatar6.png" alt="..."> -->																
 								</div>
 								
 								<div class="col-md-4 mb-4">
