favourite section now shows image

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -69,7 +69,7 @@
 								<a th:href="@{/search(param=${contact.name})}" class="list-group-item">
 									<div class="media">
 										<div class="pull-left">
-											<img class="img-circle" src="https://bootdey.com/img/Content/avatar/avatar6.png" alt="...">
+											<img class="avatar3" th:src="@{'data:image/jpg;base64,'+ ${contact.image}}" alt="...">
 										</div>
 										<div class="media-body">
 											<h4 class="media-heading" th:text="${contact.name}"></h4>
@@ -115,7 +115,7 @@
 								<div href="#" class="list-group-item">
 									<div class="media">
 										<div class="pull-left">
-											<img class="img-circle" src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="...">
+											<img class="avatar2" th:src="@{'data:image/jpg;base64,'+ ${contact.image}}" alt="...">
 										</div>
 										<div class="media-body">
 											<h4 class="media-heading"><b th:text="${contact.name}"></b></h4> <p th:text="${contact.position}">
