--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -10,6 +10,20 @@ body{
   border-radius: 50%;
 }
 
+.avatar2 {
+  vertical-align: middle;
+  width: 120px;
+  height: 100px;
+  border-radius: 50%;
+}
+
+.avatar3 {
+  vertical-align: middle;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+}
+
 .button1{
 	background-color: #9400D3;
 	color: white;
