color combination updated to grey and purple

--- a/src/main/resources/static/css/footer2.css
+++ b/src/main/resources/static/css/footer2.css
@@ -13,7 +13,7 @@ section .section-title {
     text-transform: uppercase;
 }
 #footer {
-    background: #696969 !important;
+    background: #9400D3 !important;
 }
 #footer h5{
 	padding-left: 10px;
