--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -19,7 +19,7 @@
 	<div class="container" align="center"  >
 		<div class="card2" >
 			<div class="card-body" style="color: #696969;">
-				<h2 class="card-title" id="res"><b>My Contacts -v1.0</b></h2>
+				<h2 class="card-title" id="res"><b>My Contacts -v2.0</b></h2>
 			</h3>
 			<hr>
 			</div>
@@ -131,7 +131,7 @@
 										</div>
 									</div>
 									<a th:href="@{/updateContact(param=${contact.id})}" type="button" class="btn button1" style="color:white;">Update</a>
-									<a th:href="@{/deleteContact(param=${contact.id})}" type="button" class="btn btn-danger">Delete</a>
+									<a th:href="@{/deleteContact(param=${contact.id})}" type="button" class="btn button2" style="color: white;">Delete</a>
 								</div>
 							</div>
 						</tr>
