colors in search page updated

--- a/src/main/resources/templates/search-results.html
+++ b/src/main/resources/templates/search-results.html
@@ -87,7 +87,7 @@
 									</div>
 									<div class="col-md-3">
 										<div class="btn-group" style="display:block">										  						  
-										  <button type="submit" class="btn btn-primary" style="width: 100%; background-color: #696969">Search</button>
+										  <button type="submit" class="btn button2" style="width: 100%; color: white;">Search</button>
 										</div>
 									</div>
 								</form>
