add contact page updated

--- a/src/main/resources/templates/add-contact.html
+++ b/src/main/resources/templates/add-contact.html
@@ -122,7 +122,7 @@
 		                        </div>
 		                        <div class="col-md-4 mb-3">
 		                            <label style="margin-top: 0.5em;" for="validationCustom03">Cover pic:</label>
-		                            <input style="margin-top: 0.2em; margin-bottom: 0.5em;" type="file" name='image12' class="form-control" accept="image/png, image/jpeg, image/jpg" id="validationCustom03" placeholder="Cover image" >
+		                            <input style="margin-top: 0.2em; margin-bottom: 0.5em; " type="file" name='image12' class="form-control" accept="image/png, image/jpeg, image/jpg" id="validationCustom03" placeholder="Cover image" >
 		                        </div>
 		                        
 		                        <div class="col-md-4 mb-3">
@@ -133,7 +133,7 @@
 		                        
 		                        <div class="col-md-10 mb-3">
 		                            <label style="margin-top: 0.5em;" for="validationCustom02">Address:</label>
-		                            <textarea style="margin-top: 0.2em; margin-bottom: 0.5em;" class="form-control" name='address' th:field="*{address}" id="exampleFormControlTextarea1" rows="3"></textarea>
+		                            <textarea inputmode="text" style="margin-top: 0.2em; margin-bottom: 0.5em;" class="form-control" name='address' th:field="*{address}" id="exampleFormControlTextarea1" rows="3"></textarea>
 		                        </div>
 		
 		
