--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -345,6 +345,100 @@ CONTACT MODAL VIEW
 
 
 
+input[type=text] {
+  background-color: #f6f6f6;
+  text-align: center;
+  transition: all 0.5s ease-in-out;
+  -webkit-border-radius: 5px 5px 5px 5px;
+  border-radius: 5px 5px 5px 5px;
+}
+
+input[type=email] {
+  background-color: #f6f6f6;
+  text-align: center;
+  transition: all 0.5s ease-in-out;
+  -webkit-border-radius: 5px 5px 5px 5px;
+  border-radius: 5px 5px 5px 5px;
+}
+
+input[type=tel] {
+  background-color: #f6f6f6;
+  text-align: center;
+  transition: all 0.5s ease-in-out;
+  -webkit-border-radius: 5px 5px 5px 5px;
+  border-radius: 5px 5px 5px 5px;
+}
+
+input[type=file] {
+  background-color: #f6f6f6;
+  text-align: center;
+  transition: all 0.5s ease-in-out;
+  -webkit-border-radius: 5px 5px 5px 5px;
+  border-radius: 5px 5px 5px 5px;
+}
+
+textarea[inputmode=text] {
+  background-color: #f6f6f6;
+  text-align: left;
+  transition: all 0.5s ease-in-out;
+  -webkit-border-radius: 5px 5px 5px 5px;
+  border-radius: 5px 5px 5px 5px;
+}
+
+input[type=email]:focus {
+  background-color: #fff;
+  border: 2px solid #9400D3;
+}
+
+input[type=tel]:focus {
+  background-color: #fff;
+  border: 2px solid #9400D3;
+}
+
+input[type=password]:focus {
+  background-color: #fff;
+  border: 2px solid #9400D3;
+}
+
+input[type=text]:focus {
+  background-color: #fff;
+  border: 2px solid #9400D3;
+}
+
+input[type=file]:focus {
+  background-color: #fff;
+  border: 2px solid #9400D3;
+}
+
+textarea[inputmode=text]:focus {
+  background-color: #fff;
+  border: 2px solid #9400D3;
+}
+
+input[type=text]:placeholder {
+  color: #cccccc;
+}
+
+input[type=email]:placeholder {
+  color: #cccccc;
+}
+
+input[type=tel]:placeholder {
+  color: #cccccc;
+}
+
+input[type=file]:placeholder {
+  color: #cccccc;
+}
+
+input[type=text]:placeholder {
+  color: #cccccc;
+}
+
+
+
+
+
 @media only screen and (max-width: 600px) {
   .form-control {
     width: 95%;
