home page search and profile page color updated

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -89,7 +89,7 @@
 							<div class="row">
 								<form th:action="@{/search}" method="get">
 									<div class="col-md-9">
-										<input type="text" name="param" placeholder="Search people" class="form-control">
+										<input type="text" style="background-color: white; text-align: left;" name="param" placeholder="Search people" class="form-control">
 									</div>
 									<div class="col-md-3">
 										<div class="btn-group" style="display:block">										  						  
