--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -7,21 +7,26 @@ body{
   vertical-align: middle;
   width: 320px;
   height: 320px;
-  border-radius: 50%;
+  border-radius: 100%;
+  border: 1.5px solid #9400D3;
 }
 
 .avatar2 {
   vertical-align: middle;
   width: 90px;
   height: 90px;
-  border-radius: 50%;
+  border-radius: 100%;
+  border-color: #9400D3;
+  border: 1.5px solid #9400D3;
 }
 
 .avatar3 {
   vertical-align: middle;
   width: 50px;
   height: 50px;
-  border-radius: 50%;
+  border-radius: 100%;
+  border-color: #9400D3;
+  border: 1.5px solid #9400D3;
 }
 
 .button1{
